--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   </head>
   <body>
     <header>
-      <!-- Логотип -->
-      <a href="./index.html">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -31,6 +30,7 @@
       </section>
 
       <section>
+        <h2>Description</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
